--- a/ABIMSIM/GameOverView_iPad.xib
+++ b/ABIMSIM/GameOverView_iPad.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -126,7 +126,7 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sjT-1T-I4P" userLabel="ButtonContainerView">
-                    <rect key="frame" x="123" y="222" width="522" height="589"/>
+                    <rect key="frame" x="140" y="283.5" width="522" height="589"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Play_0_iPad" translatesAutoresizingMaskIntoConstraints="NO" id="heb-0l-6hO">
                             <rect key="frame" x="29" y="29" width="258" height="258"/>
@@ -297,7 +297,7 @@
                     </constraints>
                 </view>
                 <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JXD-l0-Bng">
-                    <rect key="frame" x="718" y="974" width="40" height="40"/>
+                    <rect key="frame" x="10" y="974" width="40" height="40"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="EwM-Er-Nm7"/>
                         <constraint firstAttribute="height" constant="40" id="ddI-yu-sf0"/>
@@ -333,18 +333,18 @@
                 <constraint firstItem="Q5v-jG-H3M" firstAttribute="centerY" secondItem="Ri0-00-y9t" secondAttribute="centerY" constant="-10" id="DZk-RB-Y2A"/>
                 <constraint firstItem="t0S-HN-oOU" firstAttribute="top" secondItem="dBb-w3-QVp" secondAttribute="bottom" constant="64" id="Ehu-a1-dSV"/>
                 <constraint firstItem="goA-G1-xvE" firstAttribute="centerX" secondItem="325-Sd-TGF" secondAttribute="centerX" id="FnE-b2-Jvi"/>
-                <constraint firstItem="sjT-1T-I4P" firstAttribute="top" secondItem="Ri0-00-y9t" secondAttribute="bottom" constant="50" id="GCG-hQ-LJ8"/>
                 <constraint firstItem="taQ-2D-ReT" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="76" id="GQe-Dj-eXX"/>
                 <constraint firstAttribute="centerX" secondItem="Ri0-00-y9t" secondAttribute="centerX" constant="-224" id="HXl-Ey-8lO"/>
                 <constraint firstAttribute="centerX" secondItem="D40-7b-pCQ" secondAttribute="centerX" id="IIv-QO-rBt"/>
-                <constraint firstAttribute="trailing" secondItem="JXD-l0-Bng" secondAttribute="trailing" constant="10" id="J3c-yG-U8M"/>
                 <constraint firstItem="1EO-1s-bjI" firstAttribute="centerX" secondItem="Q5v-jG-H3M" secondAttribute="centerX" constant="60" id="KYu-MH-hdO"/>
                 <constraint firstItem="hXd-8q-B49" firstAttribute="top" secondItem="t0S-HN-oOU" secondAttribute="bottom" constant="8" id="Kwn-5c-ofB"/>
                 <constraint firstItem="ChA-2x-dQk" firstAttribute="trailing" secondItem="1aE-cS-pPT" secondAttribute="trailing" id="LLb-KH-rcZ"/>
                 <constraint firstItem="325-Sd-TGF" firstAttribute="top" secondItem="goA-G1-xvE" secondAttribute="bottom" id="Lte-FB-deX"/>
                 <constraint firstAttribute="centerX" secondItem="MSZ-Xa-RNJ" secondAttribute="centerX" id="Mky-tV-jYo"/>
+                <constraint firstItem="JXD-l0-Bng" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="P0q-sk-QhN"/>
                 <constraint firstAttribute="centerY" secondItem="zcd-Vk-j7I" secondAttribute="centerY" constant="184.5" id="Pli-Xa-P8m"/>
                 <constraint firstItem="U7O-O8-Mjb" firstAttribute="top" secondItem="hXd-8q-B49" secondAttribute="bottom" constant="7" id="R4g-sV-w6t"/>
+                <constraint firstAttribute="centerY" secondItem="sjT-1T-I4P" secondAttribute="centerY" constant="-66" id="RaC-nS-GY4"/>
                 <constraint firstItem="ChA-2x-dQk" firstAttribute="trailing" secondItem="oT7-CT-w8p" secondAttribute="trailing" id="RyD-o8-hsm"/>
                 <constraint firstAttribute="centerX" secondItem="dBb-w3-QVp" secondAttribute="centerX" id="VeQ-UE-BHi"/>
                 <constraint firstItem="Ri0-00-y9t" firstAttribute="centerX" secondItem="1EO-1s-bjI" secondAttribute="centerX" constant="35" id="XYm-zI-cx2"/>
@@ -368,7 +368,7 @@
                 <constraint firstItem="Rdw-ZQ-1T0" firstAttribute="top" secondItem="Q5v-jG-H3M" secondAttribute="bottom" id="uPD-eh-vmM"/>
                 <constraint firstItem="ChA-2x-dQk" firstAttribute="leading" secondItem="oT7-CT-w8p" secondAttribute="leading" id="vSj-0y-LBG"/>
                 <constraint firstItem="Q5v-jG-H3M" firstAttribute="centerX" secondItem="Rdw-ZQ-1T0" secondAttribute="centerX" id="vvh-yC-e3M"/>
-                <constraint firstAttribute="centerX" secondItem="sjT-1T-I4P" secondAttribute="centerX" id="wv5-xi-LWe"/>
+                <constraint firstAttribute="centerX" secondItem="sjT-1T-I4P" secondAttribute="centerX" constant="-17" id="wv5-xi-LWe"/>
                 <constraint firstItem="dBb-w3-QVp" firstAttribute="top" secondItem="zcd-Vk-j7I" secondAttribute="bottom" constant="-20" id="yj9-6f-YDY"/>
                 <constraint firstItem="Ri0-00-y9t" firstAttribute="centerY" secondItem="1EO-1s-bjI" secondAttribute="centerY" id="yjD-mg-Z5M"/>
             </constraints>
